# ai-slop-tools

./: .gitignore
cc_docs_scraper/: README.md  pyproject.toml
cc_docs_scraper/src/cc_docs_scraper/: __init__.py  cli.py  constants.py  content.py  http.py  manifest.py  orchestrator.py  urls.py
cc_docs_scraper/tests/: conftest.py  test_content.py  test_manifest.py  test_orchestrator.py  test_thresholds.py  test_urls.py
