[project]
name = "cc-docs-scraper"
version = "0.1.0"
description = "Local mirror of Claude Code documentation"
requires-python = ">=3.12"
dependencies = ["requests>=2.32,<3"]

[project.scripts]
cc-docs-scraper = "cc_docs_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_docs_scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
